force-app/main/default/objects/DeliveryRequirement__c/DeliveryRequirement__c.object-meta.xml
<CustomObject>
    <description>Object to store the additional delivery requirements related to orders (made for US but might be used somewhere else)</description>
    <label>Delivery Requirement</label>
    <nameField>
        <label>Delivery Requirements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>