force-app/main/default/objects/DeliveryRequirement__c/fields/AppointmentRequired__c.field-meta.xml
<CustomField>
    <fullName>AppointmentRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if a delivery appointment must be scheduled in advance.</inlineHelpText>
    <label>Appointment Required</label>
    <type>Checkbox</type>
</CustomField>