force-app/main/default/objects/DeliveryRequirement__c/fields/BuildingType__c.field-meta.xml
<CustomField>
    <fullName>BuildingType__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APARTMENT BUILDING</fullName>
                <label>Apartment Building</label>
            </value>
            <value>
                <fullName>COMMERCIAL BUILDING</fullName>
                <label>Commercial Building</label>
            </value>
            <value>
                <fullName>CONSTRUCTION SITE</fullName>
                <label>Construction Site</label>
            </value>
            <value>
                <fullName>SINGLE FAMILY HOME</fullName>
                <label>Single-Family Home</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>