force-app/main/default/objects/DeliveryRequirement__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Delivery Requirements</relationshipLabel>
    <relationshipName>Delivery_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>