force-app/main/default/objects/DeliveryRequirement__c/fields/ContactPointAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactPointAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Delivery Requirements</relationshipLabel>
    <relationshipName>Delivery_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>