force-app/main/default/objects/DeliveryRequirement__c/fields/DeliveryContactEmail__c.field-meta.xml
<CustomField>
    <fullName>DeliveryContactEmail__c</fullName>
    <inlineHelpText>Email address of the delivery contact.</inlineHelpText>
    <label>Delivery Contact Email</label>
    <type>Email</type>
</CustomField>