force-app/main/default/objects/DeliveryRequirement__c/fields/DeliveryContactName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryContactName__c</fullName>
    <inlineHelpText>Name of the person to be contacted at the delivery location.</inlineHelpText>
    <label>Delivery Contact Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>