force-app/main/default/objects/DeliveryRequirement__c/fields/DeliveryContactPhone__c.field-meta.xml
<CustomField>
    <fullName>DeliveryContactPhone__c</fullName>
    <inlineHelpText>Phone number of the delivery contact.</inlineHelpText>
    <label>Delivery Contact Phone</label>
    <type>Phone</type>
</CustomField>