force-app/main/default/objects/DeliveryRequirement__c/fields/ForkliftAvailableOnSite__c.field-meta.xml
<CustomField>
    <fullName>ForkliftAvailableOnSite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if a forklift is available at the delivery location to unload the goods.</inlineHelpText>
    <label>Forklift Available on Site</label>
    <type>Checkbox</type>
</CustomField>