force-app/main/default/objects/DeliveryRequirement__c/fields/InsideDelivery__c.field-meta.xml
<CustomField>
    <fullName>InsideDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if the delivery must be made inside the building, beyond curbside.</inlineHelpText>
    <label>Inside Delivery</label>
    <type>Checkbox</type>
</CustomField>