force-app/main/default/objects/DeliveryRequirement__c/fields/LiftgateRequired__c.field-meta.xml
<CustomField>
    <fullName>LiftgateRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if a truck with a liftgate is required to unload the goods at the delivery location.</inlineHelpText>
    <label>Liftgate Required</label>
    <type>Checkbox</type>
</CustomField>