force-app/main/default/objects/DeliveryRequirement__c/fields/LimitedAccess__c.field-meta.xml
<CustomField>
    <fullName>LimitedAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limited Access</label>
    <type>Checkbox</type>
</CustomField>