force-app/main/default/objects/DeliveryRequirement__c/fields/LoadingDockOnSite__c.field-meta.xml
<CustomField>
    <fullName>LoadingDockOnSite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if a loading dock is available at the delivery location.</inlineHelpText>
    <label>Loading Dock on Site</label>
    <type>Checkbox</type>
</CustomField>