force-app/main/default/objects/DeliveryRequirement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Delivery Requirements</relationshipLabel>
    <relationshipName>Delivery_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>