force-app/main/default/objects/DeliveryRequirement__c/fields/PreCallRequired__c.field-meta.xml
<CustomField>
    <fullName>PreCallRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if the carrier must call before arriving at the delivery location.</inlineHelpText>
    <label>Pre-Call Required</label>
    <type>Checkbox</type>
</CustomField>