force-app/main/default/objects/DeliveryRequirement__c/fields/SiteType__c.field-meta.xml
<CustomField>
    <fullName>SiteType__c</fullName>
    <label>Site Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Commercial Site</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Residential Site</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>