force-app/main/default/objects/DeliveryRequirement__c/fields/SpecialInstructions__c.field-meta.xml
<CustomField>
    <fullName>SpecialInstructions__c</fullName>
    <label>Special Instructions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>